# dpp_api_platform_v0

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260213_1104_c5404f7a7462_initial_schema_tenants_api_keys_runs.py  20260213_1243_b2f3f5f34551_add_unique_constraint_for_idempotency_.py  20260213_1346_f99a7078ce99_add_plan_tenantplan_tenantusagedaily_.py
apps/: __init__.py
apps/api/: __init__.py
apps/api/dpp_api/: __init__.py  main.py  schemas.py
apps/api/dpp_api/auth/: __init__.py  api_key.py
apps/api/dpp_api/budget/: __init__.py  manager.py  redis_scripts.py
apps/api/dpp_api/db/: __init__.py  models.py  redis_client.py  repo_api_keys.py  repo_plans.py  repo_runs.py  repo_tenants.py  session.py
apps/api/dpp_api/enforce/: __init__.py  plan_enforcer.py
apps/api/dpp_api/metering/: __init__.py  usage_tracker.py
apps/api/dpp_api/queue/: __init__.py  sqs_client.py
apps/api/tests/: __init__.py  conftest.py  test_auth.py  test_budget.py  test_e2e_runs.py  test_monetization.py  test_money.py  test_repo_runs.py  test_smoke.py
apps/reaper/: __init__.py
apps/reaper/dpp_reaper/: __init__.py  main.py
apps/reaper/tests/: __init__.py  conftest.py  test_reaper.py
apps/worker/dpp_worker/: __init__.py  main.py  pack_envelope.py
apps/worker/tests/: conftest.py  test_executor.py  test_finalize.py  test_pack_envelope.py
dpp/: PHASE6_AUDIT_REPORT.md
dpp/docs/schemas/: billing_schema.sql
dpp/scripts/: seed_monetization_data.py
infra/: docker-compose.yml
infra/localstack-init/: init.sh
(+47 files in other folders)
